--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,156 +1,164 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="renderer" content="webkit">
-    <title>测试平台</title>
-    <link th:href="@{/css/bootstrap.min.css?v=3.3.6}" rel="stylesheet">
-    <link th:href="@{/css/font-awesome.min.css?v=4.4.0}" rel="stylesheet">
-    <link th:href="@{/css/plugins/toastr/toastr.min.css}" rel="stylesheet">
-    <link th:href="@{/css/animate.css}" rel="stylesheet">
-    <link th:href="@{/css/style.css?v=4.1.0}" rel="stylesheet">
-    <link  th:href="@{/css/plugins/context/context.standalone.css}" rel="stylesheet">
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 
-<body class="fixed-sidebar full-height-layout gray-bg" >
-<div id="wrapper">
-    <!--左侧导航开始-->
-    <nav class="navbar-default navbar-static-side" role="navigation">
-    
-        <div class="sidebar-collapse">
-            <ul class="nav" id="side-menu">
-                <li class="nav-header">
-                    <div style="height: 78px;">
-                    <!-- 需要考虑不同屏幕logo切换 -->
-                    	<!-- <span class="logo-max"><b><img style="margin: 22px 0px;"  alt="logo" th:src="@{/img/logo_max.png}"></b></span> -->
-      					<span class="logo-min hidden"><b><img style="margin: 22px 0px;" alt="logo" th:src="@{/img/logo_min.png}"></b></span>
-                    </div>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="renderer" content="webkit">
+		<title>测试平台</title>
+		<link th:href="@{/css/bootstrap.min.css?v=3.3.6}" rel="stylesheet">
+		<link th:href="@{/css/font-awesome.min.css?v=4.4.0}" rel="stylesheet">
+		<link th:href="@{/css/plugins/toastr/toastr.min.css}" rel="stylesheet">
+		<link th:href="@{/css/animate.css}" rel="stylesheet">
+		<link th:href="@{/css/style.css?v=4.1.0}" rel="stylesheet">
+		<link th:href="@{/css/plugins/context/context.standalone.css}" rel="stylesheet">
+	</head>
 
-                </li>
-                <li th:each="menu : ${menus}">
-		               <a href="#"> <i class="fa fa fa-bar-chart-o" th:class="${menu.attributes.icon}"></i>
-		                    <span class="nav-label" th:text="${menu.text}"></span> <span lass="fa arrow"></span>
-		               </a>
-	                   <ul class="nav nav-second-level">
-	                       <li th:each="cmenu : ${menu.children}">
-	                        	<a class="J_menuItem" href="graph_echarts.html" th:text="${cmenu.text}"  th:href="${cmenu.attributes.url}">系统管理</a>
-	                       </li>
-	                   </ul>
-                </li>
-                
-            </ul>
-        </div>
-    </nav>
-    <!--左侧导航结束-->
-    <!--上侧部分开始-->
-    <div id="page-wrapper" class="gray-bg dashbard-1">
-        <div class="row border-bottom">
-            <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-                <div class="navbar-header">
-              		 <a class="navbar-minimalize minimalize-styl-2 btn btn-default "
-                       href="#" title="收起菜单"><i class="fa fa-window-restore"></i> </a>
-                    <div  class="navbar-form-custom">
-                        <div class="form-group">
-                            <input type="text" placeholder="百度一下，你就知道" class="form-control" name="wd" id="top-search">
-                        </div>
-                    </div>
-                </div>
-                 <ul class="nav navbar-top-links navbar-right pull-right">
-                 	<li class=""><a onclick="personal()" href="#" ><i class="fa fa-id-card"></i>个人设置</a></li>
-                 	<li shiro:hasPermission="sys:settings" class=""><a onclick="settings()" href="#" ><i class="fa fa-sliders"></i>系统设置</a></li>
-					<li class=" dropdown" >
-						<a id="index-username" href="#" ><span style="margin-right: 8px;" th:text="${name}"></span><span class="caret"></span></a>
-						<ul class="dropdown-menu rightMenu" >
-							<li style="text-align: justify;" th:each="sub : ${subs}">
-								<a  th:if="${curPage} != ${sub.menuId}" th:text="${sub.name}"  th:href="${sub.menuId}"></a>
+	<body class="fixed-sidebar full-height-layout gray-bg">
+		<div id="wrapper">
+			<!--左侧导航开始-->
+			<nav class="navbar-default navbar-static-side" role="navigation">
+
+				<div class="sidebar-collapse">
+					<ul class="nav" id="side-menu">
+						<li class="nav-header">
+							<div style="height: 78px;">
+								<!-- 需要考虑不同屏幕logo切换 -->
+								<!-- <span class="logo-max"><b><img style="margin: 22px 0px;"  alt="logo" th:src="@{/img/logo_max.png}"></b></span> -->
+								<span class="logo-min hidden"><b><img style="margin: 22px 0px;" alt="logo" th:src="@{/img/logo_min.png}"></b></span>
+							</div>
+
+						</li>
+						<li th:each="menu : ${menus}">
+							<a href="#"> <i class="fa fa fa-bar-chart-o" th:class="${menu.attributes.icon}"></i>
+								<span class="nav-label" th:text="${menu.text}"></span> <span lass="fa arrow"></span>
+							</a>
+							<ul class="nav nav-second-level">
+								<li th:each="cmenu : ${menu.children}">
+									<a class="J_menuItem" href="graph_echarts.html" th:text="${cmenu.text}" th:href="${cmenu.attributes.url}">系统管理</a>
+								</li>
+							</ul>
+						</li>
+
+					</ul>
+				</div>
+			</nav>
+			<!--左侧导航结束-->
+			<!--上侧部分开始-->
+			<div id="page-wrapper" class="gray-bg dashbard-1">
+				<div class="row border-bottom">
+					<nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+						<div class="navbar-header">
+							<a class="navbar-minimalize minimalize-styl-2 btn btn-default " href="#" title="收起菜单"><i class="fa fa-window-restore"></i> </a>
+							<div class="navbar-form-custom">
+								<div class="form-group">
+									<input type="text" placeholder="百度一下，你就知道" class="form-control" name="wd" id="top-search">
+								</div>
+							</div>
+						</div>
+						<ul class="nav navbar-top-links navbar-right pull-right">
+							<li class="">
+								<a onclick="personal()" href="#"><i class="fa fa-id-card"></i>个人设置</a>
 							</li>
-							<li ><a style="text-align: justify;" href="sysLogout">退出登录</a></li>
+							<li shiro:hasPermission="sys:settings" class="">
+								<a onclick="settings()" href="#"><i class="fa fa-sliders"></i>系统设置</a>
+							</li>
+							<li class=" dropdown">
+								<a id="index-username" href="#"><span style="margin-right: 8px;" th:text="${name}"></span><span class="caret"></span></a>
+								<ul class="dropdown-menu rightMenu">
+									<li style="text-align: justify;" th:each="sub : ${subs}">
+										<a th:if="${curPage} != ${sub.menuId}" th:text="${sub.name}" th:href="${sub.menuId}"></a>
+									</li>
+									<li>
+										<a style="text-align: justify;" href="sysLogout">退出登录</a>
+									</li>
+								</ul>
+							</li>
 						</ul>
-					</li>
-				</ul>
 
-            </nav>
-        </div>
-        <div class="row content-tabs">
-            <button class="roll-nav roll-left J_tabLeft hidden">
+					</nav>
+				</div>
+				<div class="row content-tabs">
+					<button class="roll-nav roll-left J_tabLeft hidden">
                 <img class="J_tabLeft_img" alt="查看左边选项卡" th:src="@{/img/left.png}">
             </button>
-            <nav class="page-tabs J_menuTabs">
-                <div class="page-tabs-content">
-                    <a href="javascript:;" class="active J_menuTab" data-id="main">首页</a>
-                </div>
-            </nav>
-            <button class="roll-nav roll-right J_tabRight hidden">
+					<nav class="page-tabs J_menuTabs">
+						<div class="page-tabs-content">
+							<a href="javascript:;" class="active J_menuTab" data-id="main">首页</a>
+						</div>
+					</nav>
+					<button class="roll-nav roll-right J_tabRight hidden">
                 <img class="J_tabRight_img" alt="查看右边选项卡" th:src="@{/img/right.png}">
             </button>
-          
-            
-        </div>
-        <div class="row J_mainContent" id="content-main">
-            <iframe class="J_iframe" name="iframe0" width="100%" height="100%"  
-            th:src="${main}" frameborder="0" data-id="main"  seamless></iframe>
-        </div>
-        <div class="footer">
-            <div class="pull-right"> Copyright &copy; 2018 <a href="http://118.31.12.178:8080/" target="_blank">hu</a> All Rights Reserved</div>
-        </div>
-    </div>
-    <!--上侧部分结束-->
 
-</div>
-<!-- 全局js -->
-<script th:src="@{/js/jquery.min.js?v=2.1.4}"></script>
-<script th:src="@{/js/bootstrap.min.js?v=3.3.6}"></script>
-<script th:src="@{/js/plugins/context/context.js}" type="text/javascript"></script>
-<script th:src="@{/js/plugins/metisMenu/jquery.metisMenu.js}"></script>
-<script th:src="@{/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
-<script th:src="@{/js/plugins/layer/layer.min.js}"></script>
-<!-- 自定义js -->
-<script th:src="@{/js/app.js?v=4.1.0}"></script>
-<script type="text/javascript" th:src="@{/js/contabs.js}"></script>
-<!-- 第三方插件 -->
-<script th:src="@{/js/plugins/pace/pace.min.js}"></script>
-<!-- Toastr script -->
-<script th:src="@{/js/plugins/toastr/toastr.min.js}"></script>
-<script type="text/javascript" th:inline="javascript">
-var ctx = [[@{/}]];
-$(function(){
-	$('li.dropdown').mouseover(function(){   
-     		$(this).addClass('open');
- 	}).mouseout(function() {
- 		$(this).removeClass('open');
-    });
-	
-	//搜索响应回车事件
-	$("#top-search").on('keydown',function(){
-	  	if(event.keyCode==13){
-	  		window.open('https://www.baidu.com/s?wd=' + $("#top-search").val(),'_blank');
-	  	}
-	  	return;
-	});
-}) ;
- 
+				</div>
+				<div class="row J_mainContent" id="content-main">
+					<iframe class="J_iframe" name="iframe0" width="100%" height="100%" th:src="${main}" frameborder="0" data-id="main" seamless></iframe>
+				</div>
+				<div class="footer">
+					<div class="pull-right"> Copyright &copy; 2018
+						<a href="http://118.31.12.178:8080/" target="_blank">hu</a> All Rights Reserved</div>
+				</div>
+			</div>
+			<!--上侧部分结束-->
 
- function personal () {
-    layer.open({
-        type: 2,
-        title: '个人设置',
-        maxmin: true,
-        shadeClose: false,
-        area: ['50%', '70%'],
-        content: ctx + 'sys/user/personal'
-   });
-}
- function settings () {
-	    layer.open({
-	        type: 2,
-	        title: '系统设置',
-	        maxmin: true,
-	        shadeClose: false,
-	        area: ['50%', '70%'],
-	        content: ctx + 'sys/settings'
-	   });
-	}
-</script>
-</body>
+		</div>
+		<!-- 全局js -->
+		<script th:src="@{/js/jquery.min.js?v=2.1.4}"></script>
+		<script th:src="@{/js/bootstrap.min.js?v=3.3.6}"></script>
+		<script th:src="@{/js/plugins/context/context.js}" type="text/javascript"></script>
+		<script th:src="@{/js/plugins/metisMenu/jquery.metisMenu.js}"></script>
+		<script th:src="@{/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
+		<script th:src="@{/js/plugins/layer/layer.min.js}"></script>
+		<!-- 自定义js -->
+		<script th:src="@{/js/app.js?v=4.1.0}"></script>
+		<script type="text/javascript" th:src="@{/js/contabs.js}"></script>
+		<!-- 第三方插件 -->
+		<script th:src="@{/js/plugins/pace/pace.min.js}"></script>
+		<!-- Toastr script -->
+		<script th:src="@{/js/plugins/toastr/toastr.min.js}"></script>
+		<script type="text/javascript" th:inline="javascript">
+			var ctx = [
+					[@ {
+							/}]];
+							$(function() {
+								$('li.dropdown').mouseover(function() {
+									$(this).addClass('open');
+								}).mouseout(function() {
+									$(this).removeClass('open');
+								});
+
+								//搜索响应回车事件
+								$("#top-search").on('keydown', function() {
+									if(event.keyCode == 13) {
+										window.open('https://www.baidu.com/s?wd=' + $("#top-search").val(), '_blank');
+									}
+									return;
+								});
+							});
+
+							function personal() {
+								layer.open({
+									type: 2,
+									title: '个人设置',
+									maxmin: true,
+									shadeClose: false,
+									area: ['50%', '70%'],
+									content: ctx + 'sys/user/personal'
+								});
+							}
+
+							function settings() {
+								layer.open({
+									type: 2,
+									title: '系统设置',
+									maxmin: true,
+									shadeClose: false,
+									area: ['50%', '70%'],
+									content: ctx + 'sys/settings'
+								});
+							}
+		</script>
+	</body>
+
 </html>
