--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>欢迎页</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-   
-</head>
-<body>
-<div class="panel panel-default">
-    <div class="panel-heading">这是首页</div>
-    <div style="padding: 10px 0 20px 10px;width:100%;height:100%">
-      <script id="editor" type="text/plain" style="width:1024px;height:500px;"></script>
-    </div>
-</div>
-</body>
+<html lang="en">
 
-<script type="text/javascript">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>欢迎页</title>
+		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 
-   /*  //实例化编辑器
-    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-    var ue = UE.getEditor('editor');
-    setTimeout(function () {
-        ue.execCommand('drafts');
-    }, 500); */
-</script>
+	</head>
+
+	<body>
+		<div class="panel panel-default">
+			<div class="panel-heading">这是首页</div>
+			<div style="padding: 10px 0 20px 10px;width:100%;height:100%">
+				<script id="editor" type="text/plain" style="width:1024px;height:500px;"></script>
+			</div>
+		</div>
+	</body>
+
+	<script type="text/javascript">
+		/*  //实例化编辑器
+		    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
+		    var ue = UE.getEditor('editor');
+		    setTimeout(function () {
+		        ue.execCommand('drafts');
+		    }, 500); */
+	</script>
+
 </html>
