--- a/src/main/resources/templates/operation/duty/MonthDuty/setDutyEmp.html
+++ b/src/main/resources/templates/operation/duty/MonthDuty/setDutyEmp.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org"
-	xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-<meta charset="utf-8">
-<head th:include="include :: header">
-<title> new document </title>
-<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-<meta name="author" content="" />
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link rel="stylesheet" type="text/css" href="" />
-<link rel="stylesheet" type="text/css" href=/css/appStyle/operation/duty/MonthDuty/addDutyEmp.css">
-<script type="text/javascript"></script>
+<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+	<meta charset="utf-8">
 
-<script type="text/javascript" src="/js/jquery.min.js"></script>
- <script type="text/javascript" src="/js/ui-choose.js"></script> 
-<script type="text/javascript" src="/js/appjs/operation/duty/MonthDuty/smartCycle.min.js"></script>
-<META NAME="Description" CONTENT="Power by hill"> 
+	<head th:include="include :: header">
+		<title> new document </title>
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+		<meta name="author" content="" />
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<link rel="stylesheet" type="text/css" href="" />
+		<link rel="stylesheet" type="text/css" href=/css/appStyle/operation/duty/MonthDuty/addDutyEmp.css ">
+<script type="text/javascript "></script>
+
+<script type="text/javascript " src="/js/jquery.min.js "></script>
+ <script type="text/javascript " src="/js/ui-choose.js "></script> 
+<script type="text/javascript " src="/js/appjs/operation/duty/MonthDuty/smartCycle.min.js "></script>
+<META NAME="Description " CONTENT="Power by hill "> 
 </head>
 <body>
-<style type="text/css">
+<style type="text/css ">
 	table{
 		border:0;
 		width:500px; 
@@ -36,43 +36,43 @@
 		width:200px;
 	}
 </style>
-<form method="post" name="myform"> 
-<table align="center"> 
-	<tr><td colspan="4">&nbsp;</td></tr>
+<form method="post " name="myform "> 
+<table align="center "> 
+	<tr><td colspan="4 ">&nbsp;</td></tr>
 	<tr> 
-		<td class="tdwidth"> 
-				<select id="user-choose" class="ui-choose"  >
-               <option id="select-choose" th:each="list:${dutyList}"   th:value="${list}" th:text="${list}"></option>
+		<td class="tdwidth "> 
+				<select id="user-choose " class="ui-choose "  >
+               <option id="select-choose " th:each="list:${dutyList} "   th:value="${list} " th:text="${list} "></option>
 		</select>
 		</td>  
 	</tr>  
-	<tr><td colspan="4">&nbsp;</td></tr>
-	<tr align="center"><td colspan="8"><button class="btn  btn-primary btnwidth" onclick="setEmp()" type="button">确定</button></td></tr>
+	<tr><td colspan="4 ">&nbsp;</td></tr>
+	<tr align="center "><td colspan="8 "><button class="btn btn-primary btnwidth " onclick="setEmp() " type="button ">确定</button></td></tr>
 	
 </table> 
 
 </form> 
 
-<div th:include="include :: footer"></div>
+<div th:include="include :: footer "></div>
 
-<script language="JavaScript"> 
+<script language="JavaScript "> 
 var userChoose;
 $(function(){
 	$('.ui-choose').ui_choose();
-	 userChoose = $("#user-choose").ui_choose();
-	userChoose.select("");
+	 userChoose = $("#user-choose ").ui_choose();
+	userChoose.select(" ");
 	
 })
  
 function setEmp(){
-	var obj = document.getElementById("user-choose");
+	var obj = document.getElementById("user-choose ");
 	var str=obj.selectedIndex;
 	//var str=obj.options[index].text;
 	//alert(index);
 	
 	  $.ajax({
 			type:'POST',
-			data:JSON.stringify(str)+","+3,
+			data:JSON.stringify(str)+", "+3,
 			contentType:'application/x-www-form-urlencoded; charset=UTF-8',
 			scriptCharset: 'GBK',
 			url:'/duty/MonthDuty/setCurrDuty',
@@ -80,7 +80,7 @@ function setEmp(){
 			success:function(data){
 			},
 			error:function(e){
-				console.log("发送失败");
+				console.log("发送失败 ");
 	    	}
 		});  
 	  //alert(1);
