--- a/src/main/resources/templates/sysManagement/system/dept/dept.html
+++ b/src/main/resources/templates/sysManagement/system/dept/dept.html
@@ -1,99 +1,99 @@
 <!DOCTYPE html>
-<html>
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
-<body class="gray-bg">
-<div class="wrapper wrapper-content ">
-	<div id='panel-1' class="cpanel col-sm-5">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+	<meta charset="utf-8">
+
+	<head th:include="include :: header"></head>
+
+	<body class="gray-bg">
+		<div class="wrapper wrapper-content ">
+			<div id='panel-1' class="cpanel col-sm-5">
 				<div class="ibox ibox-body">
-				<div class="ibox-title">
-								<div class="pull-left">
-									<h5>部门列表</h5>
-								</div>
-								<div  class="pull-right" >
-									<i id='resizeBtn-1' class="btn fa fa-expand" onclick="resize('panel-1','resizeBtn-1')"></i>
-								</div>
+					<div class="ibox-title">
+						<div class="pull-left">
+							<h5>部门列表</h5>
+						</div>
+						<div class="pull-right">
+							<i id='resizeBtn-1' class="btn fa fa-expand" onclick="resize('panel-1','resizeBtn-1')"></i>
+						</div>
 					</div>
 					<div class="ibox-button">
 						<div class="pull-right">
-	                        <button shiro:hasPermission="sys:dept:add" type="button" class="btn  btn-primary"
-	                                onclick="add()">
+							<button shiro:hasPermission="sys:dept:add" type="button" class="btn  btn-primary" onclick="add()">
 	                            <i class="fa fa-plus" aria-hidden="true"></i>添加
 	                        </button>
-	                         <button shiro:hasPermission="sys:dept:edit" type="button" class="btn  btn-primary"
-	                                onclick="edit()">
+							<button shiro:hasPermission="sys:dept:edit" type="button" class="btn  btn-primary" onclick="edit()">
 	                            <i class="fa fa-edit" aria-hidden="true"></i>编辑
 	                        </button>
-	                        <button shiro:hasPermission="sys:dept:remove" type="button" class="btn  btn-danger"
-	                                onclick="removeone()">
+							<button shiro:hasPermission="sys:dept:remove" type="button" class="btn  btn-danger" onclick="removeone()">
 	                            <i class="fa fa-trash" aria-hidden="true"></i>删除
 	                        </button>
-	                    </div> 
+						</div>
 					</div>
 					<div id="deptData" class="ibox-content pre-scrollable">
 						<div id="jstree"></div>
 					</div>
 				</div>
-	</div>
-	<div id="panel-2" class="cpanel col-sm-7">
-		<form class="form-horizontal" id="signupForm">
-				<div class="ibox ibox-body">
-					<div class="ibox-title">
-						<div class="pull-left">
-							<h5>详细信息</h5>
+			</div>
+			<div id="panel-2" class="cpanel col-sm-7">
+				<form class="form-horizontal" id="signupForm">
+					<div class="ibox ibox-body">
+						<div class="ibox-title">
+							<div class="pull-left">
+								<h5>详细信息</h5>
+							</div>
+							<div class="pull-right">
+								<i id='resizeBtn-2' class="btn fa fa-expand" onclick="resize('panel-2','resizeBtn-2')"></i>
+							</div>
 						</div>
-	                    <div  class="pull-right" >
-									<i id='resizeBtn-2' class="btn fa fa-expand" onclick="resize('panel-2','resizeBtn-2')"></i>
-								</div>
-	                </div>
-	                <div class="ibox-button">
-	                		<div class="pull-right">
-	                        <button id="cancelbtn" onclick="cancel()"  class="btn btn-danger hidden"  type="button"> 
+						<div class="ibox-button">
+							<div class="pull-right">
+								<button id="cancelbtn" onclick="cancel()" class="btn btn-danger hidden" type="button"> 
 								 		<i class="fa fa fa-close" aria-hidden="true"></i> 放弃 
-								   </button> 
-								 	<button id="savebtn"  class="btn btn-primary hidden"  type="submit"> 
+								   </button>
+								<button id="savebtn" class="btn btn-primary hidden" type="submit"> 
 								 		<i class="fa fa-check-square-o" aria-hidden="true"></i> 保存 
-								   </button> 
-	                        
-	                    </div> 
-	                </div>
-	                <div class="ibox-content pre-scrollable">
-	                
-						<div class="form-group">
+								   </button>
+
+							</div>
+						</div>
+						<div class="ibox-content pre-scrollable">
+
+							<div class="form-group">
 								<label class="col-sm-3 control-label">上级部门：</label>
 								<div class="col-sm-8">
-									<input id="parentId" name="parentId"  class="form-control hidden" type="text">
-									<input id="opt" name="opt"  class="form-control hidden" type="text">
-									<input id="deptId" name="deptId"  class="form-control hidden" type="text">
+									<input id="parentId" name="parentId" class="form-control hidden" type="text">
+									<input id="opt" name="opt" class="form-control hidden" type="text">
+									<input id="deptId" name="deptId" class="form-control hidden" type="text">
 								</div>
 								<div class="col-sm-8">
-									<input id="pName" name="pName" readonly="readonly"  class="form-control" type="text" readonly>
+									<input id="pName" name="pName" readonly="readonly" class="form-control" type="text" readonly>
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label"><em class="gg-star">*</em>部门名称：</label>
 								<div class="col-sm-8">
-									<input id="name" name="name" placeholder="部门名称"  readonly="readonly" class="form-control" type="text">
+									<input id="name" name="name" placeholder="部门名称" readonly="readonly" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">排序：</label>
 								<div class="col-sm-8">
-									<input id="orderNum" placeholder="排序"  readonly="readonly" name="orderNum"  class="form-control" type="text">
+									<input id="orderNum" placeholder="排序" readonly="readonly" name="orderNum" class="form-control" type="text">
 								</div>
 							</div>
-						
-					  </div>
-				</div>
-		</form>
-	</div>
-</div>
-<script th:inline="javascript" type="text/javascript">
-		var topNode = [[${topNode}]];
-</script>
-<div th:include="include :: footer"></div>
-<script type="text/javascript" th:src="@{/js/appjs/sysManagement/sys/dept/dept.js}"></script>
-<script type="text/javascript" th:src="@{/js/global.js}"></script>
 
-</body>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<script th:inline="javascript" type="text/javascript">
+			var topNode = [[${topNode}]];
+		</script>
+		<div th:include="include :: footer"></div>
+		<script type="text/javascript" th:src="@{/js/appjs/sysManagement/sys/dept/dept.js}"></script>
+		<script type="text/javascript" th:src="@{/js/global.js}"></script>
+
+	</body>
+
 </html>
