--- a/src/main/resources/templates/sysManagement/system/user/userTree.html
+++ b/src/main/resources/templates/sysManagement/system/user/userTree.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
-<html>
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
-<body>
-	<div class="wrapper wrapper-content animated fadeInRight">
-	
-		<div class="row">
-			<div class="col-sm-12">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" meta charset="utf-8">
 
-				<div class="ibox-content">
-					<div id="userTree"></div>
+	<head th:include="include :: header"></head>
+
+	<body>
+		<div class="wrapper wrapper-content animated fadeInRight">
+
+			<div class="row">
+				<div class="col-sm-12">
+
+					<div class="ibox-content">
+						<div id="userTree"></div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div th:include="include :: footer"></div>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			getTreeData()
-		});
-		function getTreeData() {
-			$.ajax({
-				type : "GET",
-				url : ctx + "sys/user/tree",
-				success : function(tree) {
-					loadTree(tree);
-				}
+		<div th:include="include :: footer"></div>
+		<script type="text/javascript">
+			$(document).ready(function() {
+				getTreeData()
 			});
-		}
-		function loadTree(tree) {
-			$('#userTree').jstree({
-				'core' : {
-					'data' : tree
-				}
-			});
-		}
-		$('#userTree').on("changed.jstree", function(e, data) {
-			var ref = $('#userTree').jstree(true); // 获得整个树
-			if(data.node.id!=-1 && data.node.state.mType == 'user'){
-				parent.loadUser(data.node.id,data.node.text);
-				var index = parent.layer.getFrameIndex(window.name); // 获取窗口索引
-				parent.layer.close(index);
+
+			function getTreeData() {
+				$.ajax({
+					type: "GET",
+					url: ctx + "sys/user/tree",
+					success: function(tree) {
+						loadTree(tree);
+					}
+				});
 			}
-		});
-	</script>
-</body>
+
+			function loadTree(tree) {
+				$('#userTree').jstree({
+					'core': {
+						'data': tree
+					}
+				});
+			}
+			$('#userTree').on("changed.jstree", function(e, data) {
+				var ref = $('#userTree').jstree(true); // 获得整个树
+				if(data.node.id != -1 && data.node.state.mType == 'user') {
+					parent.loadUser(data.node.id, data.node.text);
+					var index = parent.layer.getFrameIndex(window.name); // 获取窗口索引
+					parent.layer.close(index);
+				}
+			});
+		</script>
+	</body>
 
 </html>
