文档说明修改

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 						<li class="nav-header">
 							<div style="height: 78px;">
 								<!-- 需要考虑不同屏幕logo切换 -->
-								<<span class="logo-max"><b><img style="margin: 22px 0px;"  alt="logo" th:src="@{/img/backg02.jpg}"></b></span>
+								<!--<span class="logo-max"><b><img style="margin: 22px 0px;"  alt="logo" th:src="@{/css/patterns/header-profile.png}"></b></span>-->
 								<span class="logo-min hidden"><b><img style="margin: 22px 0px;" alt="logo" th:src="@{/img/logo_min.png}"></b></span>
 							</div>
 
